improved Makefile and readme

--- a/template.htm
+++ b/template.htm
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <title>$(TITLE)</title>
-    <link rel="stylesheet" href="reveal.css">
-    <link rel="stylesheet" href="theme/white.css">
+    <link rel="stylesheet" href="$(REVEAL_CSS)">
+    <link rel="stylesheet" href="$(REVEAL_THEME)">
   </head>
   <body>
     <script>
